# pyChatGPT-intl

./: .pylintrc  README.md  languages.py  pyproject.toml  setup.py  translator.py
.github/workflows/: codeql.yml
pychatgptintl/: __main_.py  translator.py
